--- a/PAN/dbFrontEndApi_SpringMVC/src/main/webapp/WEB-INF/web.xml
+++ b/PAN/dbFrontEndApi_SpringMVC/src/main/webapp/WEB-INF/web.xml
@@ -5,10 +5,11 @@
 	http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd">
 	<display-name>Archetype Created Web Application</display-name>
 
-	<context-param>
+	<!--  <context-param>
 		<param-name>resteasy.scan</param-name>
 		<param-value>true</param-value>
 	</context-param>
+	-->
 
 <!-- 	<listener>
 		<listener-class>
